# kong-rust

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  README_CN.md  TODOS.md  docker-entrypoint.sh  kong.conf.default
.github/workflows/: docker.yml  spec-tests.yml
.gstack/qa-reports/: qa-report-kong-rust-2026-03-20.md
.spec-workflow/steering/: product.md  structure.md  tech.md
crates/kong-admin/: Cargo.toml
crates/kong-admin/src/: extractors.rs  lib.rs
crates/kong-admin/src/handlers/: ai_models.rs  ai_providers.rs  ai_virtual_keys.rs  cache.rs  clustering.rs  debug.rs  mod.rs  schemas.rs  timers.rs
crates/kong-admin/tests/: admin_api_compat.rs  ai_proxy_schema.rs
crates/kong-ai/: Cargo.toml
crates/kong-ai/src/: dao.rs  lib.rs  models.rs
crates/kong-ai/src/codec/: anthropic_format.rs  mod.rs  openai_format.rs  responses_format.rs  sse.rs
crates/kong-ai/src/embedding/: mod.rs  openai.rs  vector_store.rs
crates/kong-ai/src/plugins/: ai_cache.rs  ai_prompt_guard.rs  ai_proxy.rs  ai_rate_limit.rs  ai_semantic_cache.rs  context.rs  mod.rs
crates/kong-ai/src/provider/: anthropic.rs  balancer.rs  gemini.rs  mod.rs  openai.rs  openai_compat.rs  router.rs
crates/kong-ai/src/ratelimit/: memory.rs  mod.rs
crates/kong-ai/src/token/: cost.rs  counter.rs  hf_loader.rs  mod.rs  registry.rs  remote_count.rs  tokenizer.rs
crates/kong-ai/tests/: ai_cache_test.rs  ai_proxy_semantic_routing_test.rs  ai_proxy_streaming_test.rs  ai_proxy_test.rs  ai_semantic_cache_test.rs  auth_test.rs  balancer_test.rs  codec_anthropic_test.rs  config_validation_test.rs  e2e_test.rs  error_handling_test.rs  hf_loader_test.rs  log_test.rs  model_override_test.rs  prompt_guard_test.rs  provider_anthropic_test.rs  provider_compat_test.rs  provider_gemini_test.rs  provider_openai_test.rs  ratelimit_advanced_test.rs  ratelimit_test.rs  remote_count_test.rs  responses_format_test.rs  router_test.rs  sse_test.rs  streaming_advanced_test.rs  token_test.rs  tokenizer_registry_test.rs  tool_call_test.rs
crates/kong-ai/tests/helpers/: mod.rs
crates/kong-cluster/: Cargo.toml
crates/kong-cluster/src/: cache.rs  cp.rs  dp.rs  lib.rs  protocol.rs  tls.rs
crates/kong-cluster/tests/: integration_test.rs
crates/kong-config/: Cargo.toml
crates/kong-core/: Cargo.toml
crates/kong-core/src/: error.rs  lib.rs
crates/kong-core/src/models/: ca_certificate.rs  certificate.rs  common.rs  consumer.rs  key.rs  key_set.rs  mod.rs  plugin.rs  route.rs  service.rs  sni.rs  target.rs  upstream.rs  vault.rs
crates/kong-core/src/traits/: dao.rs  entity.rs  mod.rs  plugin.rs
crates/kong-db/: Cargo.toml
crates/kong-db/migrations/core/: 000_base.sql  001_add_workspaces.sql  002_ai_gateway.sql  003_keys.sql
crates/kong-db/src/: cache.rs  database.rs  dbless.rs  lib.rs  migrations.rs
crates/kong-db/src/dao/: mod.rs  postgres.rs
crates/kong-lua-bridge/: Cargo.toml
crates/kong-lua-bridge/kong/plugins/error-generator/: handler.lua  schema.lua
crates/kong-lua-bridge/kong/plugins/request-termination/: handler.lua  schema.lua
crates/kong-lua-bridge/kong/plugins/request-transformer/: handler.lua  schema.lua
crates/kong-lua-bridge/kong/plugins/response-transformer/: handler.lua  schema.lua
crates/kong-lua-bridge/src/: lib.rs  loader.rs  metrics.rs  runtime.rs  vm.rs
crates/kong-lua-bridge/src/pdk/: kong.rs  mod.rs  ngx.rs
crates/kong-lua-bridge/tests/: ai_proxy_plugin_compat.rs  lua_plugin_compat.rs  prometheus_plugin_compat.rs
crates/kong-plugin-system/: Cargo.toml
crates/kong-plugin-system/src/: lib.rs
crates/kong-proxy/: Cargo.toml
crates/kong-proxy/src/: access_log.rs  balancer.rs  dns.rs  grpc.rs  health.rs  lib.rs  phases.rs  spillable_buffer.rs  stream.rs  stream_tls.rs  tls.rs
crates/kong-proxy/tests/: phase_chain.rs  proxy_e2e.rs
crates/kong-proxy/tests/helpers/: mod.rs
crates/kong-router/: Cargo.toml
crates/kong-router/src/: expressions.rs  lib.rs  stream.rs  traditional.rs
crates/kong-server/: Cargo.toml
crates/kong-server/src/: main.rs  mock_upstream.rs
crates/kong-server/tests/: spec_runner.rs
docs/: ai-gateway-guide.md  ai-gateway-guide_cn.md  design.md  tasks.md
docs/designs/: ai-gateway-strategy.md  kong-rust-roadmap.md
docs/implementation-logs/: 17.1-grpc-proxy.md  phase0-step1-busted-compat.md  phase0-test-alignment.md  task-10-2_2026-03-08T0455_52911dd1.md  task-10-6_2026-03-13T0000_docker_admin_listen.md  task-12-1_2026-03-09T2331_35295BA6.md  task-14-1_14-2_2026-03-20_qa-bugfix.md  task-15-1_2026-04-04_responses-api.md  task-16-3_16-4_2026-04-19_cache_and_log_level.md  task-16-5_20-1_2026-04-20_timers_and_graceful_shutdown.md  task-19A_2026-04-30T1141_ai-tokenizer.md  task-19B_2026-05-01_ai-advanced-routing-cache.md  task-2-3_2026-03-07T0217_c9444674.md  task-2-4_2026-03-07T0217_96cd1370.md  task-2-5_2026-03-07T0540_2b06f089.md  task-2-6_2026-03-07T0550_0a2326c4.md  task-6-4_2026-03-13T0000_gui_spa_fallback.md  task-8-11_2026-03-07T1204_80b8f536.md  task-8-12_2026-03-14T1318_23885db8.md  task-8-16_2026-03-07T1650_539b5393.md  task-8-18_2026-03-08T0158_13ca4b10.md  task-8-19_2026-03-08T0658_d28ce360.md  task-8-6_2026-03-07T0651_ab0eb103.md  task-8-7_2026-03-07T0743_27a80623.md  task-8-8_2026-03-07T0752_6d4663f7.md  task-8-9_2026-03-07T1202_51065ebe.md  task-9-1_2026-03-13T1535_4c819b56.md  task-9-1_2026-03-13T1559_005b47fc.md  task-9-1_2026-03-13T1614_d7df1c58.md  task-9-1_2026-03-14T1515_d78a9634.md
kong/: constants.lua  meta.lua
kong-manager/: vite.config.ts
kong/db/: errors.lua
kong/tools/: string.lua  table.lua  uuid.lua
resty/: http.lua
scripts/: run-cargo-test.sh  run-specs.sh  setup-busted.sh
scripts/dependency_services/: 00-create-pg-db.sh  common.sh  docker-compose-test-services.yml  up.sh
spec/: helpers.lua  hybrid.lua  kong_tests.conf
spec/00-smoke/: 01-admin_api_spec.lua  02-mock_upstream_spec.lua  03-assertions_spec.lua
spec/fixtures/: admin_api.lua  default_status_listen.conf  headers.conf  http_client.lua
spec/helpers/: http_mock.lua
table/: nkeys.lua
(+66 files in other folders)
