[package]
name = "kong-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
kong-core = { workspace = true }
kong-db = { workspace = true }
kong-plugin-system = { workspace = true }
kong-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tiktoken-rs = { workspace = true }
sha2 = { workspace = true }
dashmap = { workspace = true }
anymap2 = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
