[package]
name = "kong-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
kong-core = { workspace = true }
kong-db = { workspace = true }
kong-plugin-system = { workspace = true }
kong-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tiktoken-rs = { workspace = true }
sha2 = { workspace = true }
dashmap = { workspace = true }
anymap2 = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
# Step 3: HuggingFace tokenizer.json 本地加载(开源模型 LLaMA/Qwen/Mistral 等)
tokenizers = { workspace = true }
# Step 3: HF tokenizer.json 远端下载;Step 4 复用作为 OpenAI/Anthropic/Gemini count API 客户端
reqwest = { workspace = true }
# Step 4: 远端 count 结果共享 LRU(容量 + TTL)
moka = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
axum = { workspace = true }
tempfile = { workspace = true }
