[package]
name = "kong-db"
version.workspace = true
edition.workspace = true

[dependencies]
kong-core = { workspace = true }
kong-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
moka = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
