[package]
name = "kong-lua-bridge"
version.workspace = true
edition.workspace = true

[dependencies]
kong-core = { workspace = true }
kong-config = { workspace = true }
kong-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mlua = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
