[package]
name = "kong-plugin-system"
version.workspace = true
edition.workspace = true

[dependencies]
kong-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
