[package]
name = "kong-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
kong-core = { workspace = true }
kong-config = { workspace = true }
kong-db = { workspace = true }
kong-router = { workspace = true }
kong-plugin-system = { workspace = true }
kong-lua-bridge = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
pingora = { workspace = true }
pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
pingora-load-balancing = { workspace = true }
pingora-http = { workspace = true }
uuid = { workspace = true }
http = "1"
chrono = { workspace = true }
hickory-resolver = { workspace = true }
tempfile = { workspace = true }
percent-encoding = "2"
openssl = "0.10"
tokio-openssl = "0.6"
