[package]
name = "kong-router"
version.workspace = true
edition.workspace = true

[dependencies]
kong-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
uuid = { workspace = true }
moka = { workspace = true }
