[package]
name = "kong-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kong"
path = "src/main.rs"

[dependencies]
kong-core = { workspace = true }
kong-config = { workspace = true }
kong-db = { workspace = true }
kong-router = { workspace = true }
kong-proxy = { workspace = true }
kong-plugin-system = { workspace = true }
kong-lua-bridge = { workspace = true }
kong-admin = { workspace = true }
kong-ai = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
gethostname = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
pingora = { workspace = true }
pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
async-trait = { workspace = true }
openssl = "0.10"
tokio-openssl = "0.6"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http2"] }
tower = "0.5"
